2000-12-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (DestroyMenuStyle):
	(UpdateMenuStyle):
	(NewMenuStyle):
	improved error messages

	* fvwm/fvwm.c (InitVariables):
	* fvwm/menus.c (MenuInteraction):
	(NewMenuStyle):
	(is_double_click):
	(menuShortcuts):
	* fvwm/menus.h (MenuFeel):
	DoubleClickTime and PopupDelay can now be menu specific
	(MenuInfo):
	removed unused flags member

	* fvwm/stack.c (verify_stack_ring_consistency):
	additional checks
	(remove_window_from_stack_ring):
	Set stack pointers to NULL after removing a window from the stack ring.
	At least, this should cause a core dump as sooner.

	* fvwm/menus.c
	removed some comments
	(paint_menu):
	(pop_menu_up):
	(select_menu_item):
	prevent possible FvwmWindow pointer corruption

	* fvwm/stack.c (add_window_to_stack_ring_after):
	* fvwm/events.c (HandleConfigureRequest):
	safety patch for broken ConfigureRequest packets when a window requests
	to be placed relative to itself or its own fframe window
	(DispatchEvent):
	fixed possible fvwm window corruption; a pointer to a just deleted
	window was remembered under certain circumstances

	* fvwm/stack.c (RaiseOrLowerWindow):
	use functions to add/delete windows from stack ring

	* fvwm/session.c (MatchWinToSM):
	removed '#if 0'ed stacking order code

	* fvwm/move_resize.c (moveLoop):
	(resize_window):
	removed XAllowEvents calls

	* fvwm/events.c (HandleButtonPress):
	* fvwm/events.c (WaitForButtonsUp):
	fixed hang with actions bound to a button on an icon

	* fvwm/stack.c (new_layer):
	(mark_transient_subtree):
	fixed stack ring corruption with applications that use the GNOME layer
	hint

	* fvwm/window_flags.h (SET_IN_TRANSIENT_SUBTREE):
	* fvwm/fvwm.h (struct):
	new flag to fix stack ring problem

	* fvwm/add_window.c (setup_layer):
	transients inherit layer from transientfor window when created

	* fvwm/stack.c (get_transientfor_window):
	new function

2000-12-07  Dan Espen  <dane@mk.telcordia.com>
