@@ -1,3 +1,11 @@
+2000-12-17  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/add_window.c (AddWindow/destroy_window): 
+	* fvwm/events.c (HandleMapRequestKeepRaised): 
+	* fvwm/placement.c (PlaceWindow): Fix inconsistent declaration of
+	PPosOverride as both Bool and Boolean.  Fixes fvwm doing interactive
+	placement during startup and recapture.
+
 2000-12-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (DestroyMenuStyle):
